[package]
name = "smol_skip_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.140", features = ["derive"] }
st_file = { git = "https://github.com/JojiiOfficial/st-file" }
